--- a/app/globals.css
+++ b/app/globals.css
@@ -36,19 +36,19 @@
   }
 
   .dark {
-    --background: 222.2 84% 4.9%;
+    --background: 222 21% 12%;
     --foreground: 210 40% 98%;
 
-    --card: 222.2 84% 4.9%;
+    --card: 222.86 19.44% 14.12%;
     --card-foreground: 210 40% 98%;
 
-    --popover: 222.2 84% 4.9%;
+    --popover: 222.86 19.44% 14.12%;
     --popover-foreground: 210 40% 98%;
 
-    --primary: 210 40% 98%;
+    --primary: 41.9 89.95% 60.98%;
     --primary-foreground: 222.2 47.4% 11.2%;
 
-    --secondary: 217.2 32.6% 17.5%;
+    --secondary: 38.12deg 96% 80.39%;
     --secondary-foreground: 210 40% 98%;
 
     --muted: 217.2 32.6% 17.5%;
