solve some style issues 🎨

--- a/app/globals.css
+++ b/app/globals.css
@@ -55,7 +55,7 @@
     --muted-foreground: 215 20.2% 65.1%;
 
     --accent: 217.2 32.6% 17.5%;
-    --accent-foreground: 210 40% 98%;
+    --accent-foreground: 217.2 31.14% 23.05%;
 
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 210 40% 98%;
@@ -76,4 +76,9 @@
   body {
     @apply bg-background text-foreground h-full;
   }
+}
+
+.react-select__menu,
+.react-select__menu-list {
+  @apply bg-background;
 }
